# jpeg.eth

./: .envrc.example  .gitignore  README.md  SCENARIO.md
.github/workflows/: test.yml  token_test.yml
back/: .dockerignore  .gitignore  Cargo.toml  server.Dockerfile  test.sh
back/generator/: .gitignore  Cargo.toml  README.md
back/generator/resources/: config.json  variants.afdesign
back/generator/src/: generator.rs  layer.rs  main.rs
back/resources/: app.db  generator_config.json
back/resources/db/: db.sql
back/resources/input/background/: _meta.json
back/resources/input/circle/: _meta.json
back/resources/input/moon/: _meta.json
back/resources/input/ornament/: _meta.json
back/server/: Cargo.toml  README.md
back/server/resources/: app.db
back/server/resources/db/: db.sql  setup.sh
back/server/src/: alchemy.rs  db.rs  image.rs  image_routes.rs  listener.rs  main.rs
back/utils/: Cargo.toml
back/utils/src/: lib.rs
front/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  web3.d.ts
front/src/components/: Layout.tsx  Navbar.tsx
front/src/components/inventory/: NFT.tsx
front/src/components/ui/: card.tsx
front/src/context/: ContractContext.tsx
front/src/lib/: contract.ts  metadata.ts  wagmi.ts
front/src/lib/wagmi/: index.ts  utils.ts
front/src/pages/: _app.tsx  _document.tsx  faucet.tsx  index.tsx  inventory.tsx
front/src/styles/: globals.css
token/: README.md  deploy.sh  foundry.toml  lcov.info
token/lib/openzeppelin-contracts/: package-lock.json
token/src/: JPEGNFT.sol  LegendoraNFT.sol  MythNFT.sol  constants.sol
token/test/: JPEGNFT.t.sol  LegendoraNFT.t.sol  MythNFT.t.sol
