[package]
name = "generator"
version = "0.1.0"
authors = ["Nathan David <me@vahor.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
itertools = "0.10.5"
rayon = "1.7"