[package]
name = "server"
version = "0.1.0"
authors = ["Nathan David <me@vahor.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", default_features = false, features = ["macros"] }