[package]
name = "server"
version = "0.1.0"
authors = ["Nathan David <me@vahor.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"

actix-cors = "0.6.4"
actix-web = { version = "4.3.1", default_features = false, features = ["macros"] }
actix-files = "0.6.2"

r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = "0.29.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

ethers = { version = "2.0.6", features = ["ws", "abigen", "rustls"] }

anyhow = "1.0.40"
tokio = { version = "1.12.0" }

fake = { version = "2.6", features=['derive']}
rand = "0.8"
